k8s/service.yaml
# ============================================================
# Service - Exposition interne de l'application
# Auteur: KHLIFI HOUCEM / FORMATEUR DEVSECOPS & CLOUD
# ============================================================
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: demo-app
  labels:
    app: k8s-demo
spec:
  type: ClusterIP
  selector:
    app: k8s-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
